# iec_61850

./: CMakeLists.txt  README.md  simple_attack.py
.github/workflows/: greetings.yml
CC_SNIFER/: KMeans_Clustering  SVMlinearmodel  cc_sniffer.c  ml_interface.h  ml_interface.py
JUPYTER/: Final_version.ipynb
config/: stack_config.h  stack_config.h.cmake
examples/: CMakeLists.txt  Makefile
examples/client/: CMakeLists.txt  client  client.c
examples/iec61850_client_example_control/: client_example_control
examples/iec61850_client_example_log/: client_example_log  client_example_log.c
examples/mms_utility/: mms_utility
examples/server/: server_example_logging  server_example_logging.c
examples/server_app/: CMakeLists.txt  Makefile  log_status.db  model.cfg  server_app  server_app.c  simpleIO_control_tests.icd  static_model.c  static_model.h
examples/server_example_config_file/: server_example_config_file
examples/server_example_control/: server_example_control  static_model.h
examples/server_example_logging/: log_status.db  server_example_logging  server_example_logging1
examples/server_example_write_handler/: server_example_write_handler
pyiec61850/examples/: READ.ME
src/common/inc/: libiec61850_platform_includes.h
